# ADBQTools

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-15-androidqtools-implementation.md
docs/superpowers/specs/: 2026-05-15-androidqtools-design.md
scripts/: download-resources.sh
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  device_manager.rs  embedded.rs  installer.rs  lib.rs  logcat_engine.rs  main.rs  package_parser.rs  unity_parser.rs  util.rs
src/lib/: i18n.ts  types.ts
src/lib/components/: AppPreview.svelte  DevicePanel.svelte  InstallHistory.svelte  Installer.svelte  LogcatFilterBar.svelte  LogcatRow.svelte  LogcatViewer.svelte  PackageInfoDialog.svelte  SettingsDialog.svelte  StackGroup.svelte  StatusBar.svelte  Toolbar.svelte  TutorialDialog.svelte  WifiDialog.svelte
src/lib/components/ui/: Button.svelte  Dialog.svelte  Input.svelte  ProgressBar.svelte  Select.svelte  Tabs.svelte
src/lib/stores/: columnWidths.ts  devices.ts  installer.ts  logcat.ts  settings.ts
src/lib/utils/: format.ts  tauri.ts
src/styles/: global.css  variables.css
